deploy/testblog-deployment.yaml
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: blog-frontend
  annotations:
    
spec:
  selector:
    matchLabels:
      app: testblog
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: testblog
        tier: frontend
    spec:
      containers:
      - name: blog-frontend
        image: docker.io/spcsenti/testblog:latest
        # update image value with the image URI of the container registry  
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
