deploy/testblog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend
  labels:
    app: testblog
    tier: frontend 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: testblog
    tier: frontend
